@@ -1,8 +1,8 @@
 package page.clab.api.domain.recruitment.application;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import page.clab.api.domain.notification.application.NotificationService;
 import page.clab.api.domain.recruitment.dao.RecruitmentRepository;
 import page.clab.api.domain.recruitment.domain.Recruitment;
@@ -10,9 +10,9 @@ import page.clab.api.domain.recruitment.dto.request.RecruitmentRequestDto;
 import page.clab.api.domain.recruitment.dto.request.RecruitmentUpdateRequestDto;
 import page.clab.api.domain.recruitment.dto.response.RecruitmentResponseDto;
 import page.clab.api.global.exception.NotFoundException;
+import page.clab.api.global.validation.ValidationService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,25 +20,31 @@ public class RecruitmentService {
 
     private final NotificationService notificationService;
 
+    private final ValidationService validationService;
+
     private final RecruitmentRepository recruitmentRepository;
 
     @Transactional
-    public Long createRecruitment(RecruitmentRequestDto recruitmentRequestDto) {
-        Recruitment recruitment = Recruitment.of(recruitmentRequestDto);
+    public Long createRecruitment(RecruitmentRequestDto requestDto) {
+        Recruitment recruitment = RecruitmentRequestDto.toEntity(requestDto);
+        validationService.checkValid(recruitment);
         notificationService.sendNotificationToAllMembers("새로운 모집 공고가 등록되었습니다.");
         return recruitmentRepository.save(recruitment).getId();
     }
 
+    @Transactional(readOnly = true)
     public List<RecruitmentResponseDto> getRecentRecruitments() {
         List<Recruitment> recruitments = recruitmentRepository.findTop5ByOrderByCreatedAtDesc();
         return recruitments.stream()
-                .map(RecruitmentResponseDto::of)
-                .collect(Collectors.toList());
+                .map(RecruitmentResponseDto::toDto)
+                .toList();
     }
 
-    public Long updateRecruitment(Long recruitmentId, RecruitmentUpdateRequestDto recruitmentUpdateRequestDto) {
+    @Transactional
+    public Long updateRecruitment(Long recruitmentId, RecruitmentUpdateRequestDto requestDto) {
         Recruitment recruitment = getRecruitmentByIdOrThrow(recruitmentId);
-        recruitment.update(recruitmentUpdateRequestDto);
+        recruitment.update(requestDto);
+        validationService.checkValid(recruitment);
         return recruitmentRepository.save(recruitment).getId();
     }
 
